--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
-    "sass": "^1.49.0",
     "gulp": "^4.0.2",
     "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "node-sass": "^9.0.0"
+    "node-sass": "^9.0.0",
+    "sass": "^1.49.0"
   },
   "scripts": {
     "build": "gulp build",
